# animind_ai

./: .gitignore  README.md
backend/: .env.example  Dockerfile  e2b.toml  main.py  pyproject.toml
backend/agents/: code_generation_agent.py  graph.py  json_generation_agent.py  validation_agent.py
backend/examples/: point_on_shape.json
backend/nodes/: code_debug_node.py  code_execution_node.py  code_generation_node.py  code_validation_node.py  routing_nodes.py
backend/prompts/: Json_prompt.py  code_editor.py  code_fix_prompt.py  code_generator.py
backend/routes/: generate.py
backend/schema/: agent_state.py  models.py  query.py
backend/services/: llm.py
backend/tools/: code_generator_tool.py  code_validation_tool.py  json_generation.py
backend/utils/: code_extractor.py  sandbox_creator.py  save_code.py  worker.py
e2b-template/: e2b.Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
