[project]
name = "manim-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e2b-code-interpreter>=2.4.1",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.10",
    "langgraph>=1.0.10",
    "litellm>=1.82.0",
    "manim>=0.20.1",
]
